--- a/style.css
+++ b/style.css
@@ -1,6 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 /* font-family: Azeret Mono; */
 
+/* shared styles */
+.description{
+    color: rgb(13, 19, 33);
+font-size: 16px;
+font-weight: 400;
+text-align: center;
+opacity: 0.7
+
+}
+
+.second-title{
+    font-size: 32;
+    font-weight: 800;
+    text-align: center;
+}
+
 #hero{
     height: 456px;
     background: url('./assets/Hero-bg.png');
@@ -10,6 +26,8 @@
    
 
 }
+
+
 .container{
     display: flex;
     flex-direction: column;
@@ -59,14 +77,23 @@ text-align: center;
 margin-bottom: 28px;
 opacity: 0.7;
 }
-/* The second page starts */
-#purpose .first .title2{
+/* The Why webdev page starts */ 
+
+.purpose{
+    max-width: 946px;
+    margin: 0 auto;
+}
+.purpose .first {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+.purpose .first .second-title{
     color: rgb(13, 19, 33);
+    font: Azeret Mono;
 font-size: 20px;
 font-weight: 800;
-line-height: 24px;
-letter-spacing: 0%;
 text-align: center;
 }
-
-
