--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 font-size: 16px;
 font-weight: 400;
 text-align: center;
-opacity: 0.7
+opacity: 0.7;
 
 }
 
@@ -18,11 +18,14 @@ opacity: 0.7
     text-align: center;
 }
 .first-purpose-title{
-    color: rgba(13, 19, 33, 0.7);
+    color: rgba(13, 19, 33, 0.8);
 font-size: 24px;
 font-weight: 400;
-text-align: center;
-opacity: 0.8;
+}
+.first-target-title{
+    color: rgba(13, 19, 33);
+font-size: 24px;
+font-weight: 400;
 }
 
 #hero{
@@ -139,4 +142,56 @@ align-items: flex-start;
     margin: 0 auto;
     
 }
+
+/* My target section starts */
+.target-description{
+    color: rgb(13, 19, 33);
+font-size: 16px;
+font-weight: 400;
+text-align: start;
+opacity: 0.7;
+
+}
+.target-title{
+    
+        color: rgb(13, 19, 33);
+    font-size: 24px;
+    font-weight: 800;
+    align-items: center;
+    }
+
+    .target{
+        height: 500px;
+    }
+
+.items{
+    display: flex;
+justify-content: center;
+align-items: flex-start;
+    padding: 0px 0px;
+}
+.item1{
+    width: 300px;
+height: 250px;
+    border-radius: 16px;
+background: rgba(255, 76, 30, 0.05);
+margin: 0px 24px;
+padding: 40px;
+}
+
+.item2{
+    width: 300px;
+height: 250px;
+    border-radius: 16px;
+    background: rgba(0, 76, 232, 0.05);
+padding: 40px;
+}
+.item3{
+    width: 300px;
+height: 250px;
+    border-radius: 16px;
+    background: rgba(255, 223, 0, 0.05);
+padding: 40px;
+}
+
 
